src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-dwP0.25-t.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\ndefault column width: P0.25\ntabbed"
expression: snapshot
---
initial configure:
size: 1239 × 688, bounds: 1239 × 688, states: []

post-map configures:
size: 1239 × 688, bounds: 1239 × 688, states: [Activated]
